--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,8 +9,7 @@ margin-top: 200px;
 margin-left: 32.5%;
 }
 body{
-  background-image:url('/home/naomi/Documents/Kitty/pig-dice/image/pig-frame.jpg');
+  background-image:url('https://rfclipart.com/image/big/cd-23-8e/pink-heart-shaped-floral-frame-Download-Royalty-free-Vector-File-EPS-22261.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-
 }
